[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/box.png" type="Texture" id=1]
[ext_resource path="res://Objects/Box.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=3]
rough = true
bounce = 0.25
absorbent = true

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[sub_resource type="CircleShape2D" id=4]
radius = 24.0

[node name="Box" type="RigidBody2D" groups=["Bodies", "Box"]]
input_pickable = true
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
script = ExtResource( 2 )

[node name="Box" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -10, -12, 10, -12, 12, -10, 12, 10, 10, 12, 10, 12, -10, 12, -12, 10, -12, -10 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Collision_timer" type="Timer" parent="."]

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Collision_timer" to="." method="_on_Collision_timer_timeout"]
